# examples-cppmodules

./: CMakeLists.txt  CMakePresets.json  CMakeReleasePresets.json  README.md
.github/workflows/: windows.yml
Conflicts/: main.cpp  mod.ixx  mod2.ixx
DllModule/: main.cpp  mod.class.ixx  mod.func.cpp  mod.func.ixx  mod.ixx
ExternalDllModule/: mod.class.cpp
PartitionModule/: main.cpp  mod.class.ixx  mod.func.cpp  mod.func.ixx
SingleFileModule/: mod.ixx
SubModules/: main.cpp
SubModules/mod/: mod.ixx
SubModules/mod/sub1/: mod.sub1.class.cpp  mod.sub1.class.ixx  mod.sub1.func.cpp  mod.sub1.func.ixx  mod.sub1.ixx
SubModules/mod/sub2/: mod.sub2.ixx
TwoFileModule/: main.cpp  mod.cpp  mod.ixx
cmake/: .cmake-format.yaml  AddUninstallTarget.cmake  README.md  VSWhere.cmake  Windows.Clang.toolchain.cmake  Windows.Kits.cmake  Windows.MSVC.toolchain.cmake
